syntax = "proto3";

package eth.v1;

import "eth/v1/types.proto";

option go_package = "github.com/OpenAudio/go-openaudio/pkg/api/eth/v1";

service EthService {
  rpc GetStatus(GetStatusRequest) returns (GetStatusResponse) {}
  rpc GetRegisteredEndpoints(GetRegisteredEndpointsRequest) returns (GetRegisteredEndpointsResponse) {}
  rpc GetRegisteredEndpointsForServiceProvider(GetRegisteredEndpointsForServiceProviderRequest) returns (GetRegisteredEndpointsForServiceProviderResponse) {}
  rpc GetRegisteredEndpointInfo(GetRegisteredEndpointInfoRequest) returns (GetRegisteredEndpointInfoResponse) {}
  rpc GetServiceProvider(GetServiceProviderRequest) returns (GetServiceProviderResponse) {}
  rpc GetServiceProviders(GetServiceProvidersRequest) returns (GetServiceProvidersResponse) {}
  rpc GetStakingMetadataForServiceProvider(GetStakingMetadataForServiceProviderRequest) returns (GetStakingMetadataForServiceProviderResponse) {}
  rpc GetLatestFundingRound(GetLatestFundingRoundRequest) returns (GetLatestFundingRoundResponse) {}
  rpc IsDuplicateDelegateWallet(IsDuplicateDelegateWalletRequest) returns (IsDuplicateDelegateWalletResponse) {}
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Subscribe(SubscriptionRequest) returns (stream SubscriptionResponse) {}
  rpc GetActiveSlashProposalForAddress(GetActiveSlashProposalForAddressRequest) returns (GetActiveSlashProposalForAddressResponse) {}
}
